--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    font-family: 'Roboto', sans-serif;   
+}
+
+h1{
+    font-family: 'Roboto Slab', serif;
+}
+
 .choeur {
     font-style: italic;
 }
